made changes to the hamburger menu due to contrast issues

--- a/src/components/HeroSection/hero.css
+++ b/src/components/HeroSection/hero.css
@@ -131,23 +131,23 @@
 }
 
 .product-stats {
-  /* background-color: rgba(255, 35, 227, 1);
+  background-color: rgba(255, 35, 227, 1);
   background: linear-gradient(
     90deg,
     rgba(255, 190, 247, 1) 0%,
     rgba(255, 120, 238, 1) 35%,
     rgba(255, 35, 227, 1) 100%
-  ); */
-  background-color: #ffffff;
+  );
+  /* background-color: #ffffff;
   background-image: linear-gradient(
     56deg,
     #ffffff 0%,
     #6284ff 50%,
     #ff0000 100%
-  );
-  padding: 4rem 2.8rem;
-  border: 5px dotted whitesmoke;
-  border-radius: 50%;
+  ); */
+  padding: 2rem 1.4rem;
+  border: 5px dotted white;
+  border-radius: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
